[workspace]
members = [
# Kernel
    "sophon",
# Kernel Modules,
    "modules/dev",
    "modules/bcm2711-gpio",
    "modules/gic",
    "modules/gic-timer",
    "modules/hello",
    "modules/pl011",
    "modules/vfs",
    "modules/virtio-net",
# Libraries
    "libs/bitflags",
    "libs/boot",
    "libs/dev",
    "libs/device-tree",
    "libs/elf-loader",
    "libs/vfs",
    "libs/interrupt",
    "libs/kernel-module",
    "libs/kernel-module/macros",
    "libs/mutex",
    "libs/proc",
    "libs/syscall",
    "libs/user",
    "libs/log",
    "libs/memory",
# Tools
    "tools/dev",
# Boot loaders
    "boot/uefi",
# User programs
    "user/init",
    "user/tty",
    "user/hello",
    "user/ls",
]

[workspace.package]
version = "0.0.3"
edition = "2021"

[profile.dev]
panic = "abort"
opt-level = "z" # temporarily reduce init.fs load time

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[workspace.dependencies]
spin = "0.9.3"
fdt-rs = { version = "0.4.3", default-features = false }
serde = { version = "1.0", default-features = false }
postcard = { version = "1.0.0", features = ["alloc"] }
atomic = "0.5"
crossbeam = { version = "0.8.1", default-features = false, features = ["alloc"] }
hashbrown = "0.12"
cortex-a = "7.4.0"
tock-registers = "0.7.0"
yaml-rust = "0.4.5"
xshell = "0.2.2"
clap = { version = "3.2.8", features = ["derive"] }
uefi = { version = "0.16.0", features = ["exts", "alloc"] }
uefi-services = "0.13.0"
xmas-elf = "0.8.0"
anyhow = { version = "1.0", default-features = false }
quote = "1.0.20"
syn = { version = "1.0.98", features = ["full"] }
bitmask-enum = "2.0.0"
