[workspace]
resolver = "2"
members = [
    # Kernel
    "sophon/macros",
    "sophon",
    # Kernel Modules,
    "modules/dev",
    "modules/bcm2711-gpio",
    "modules/gic",
    "modules/gic-timer",
    "modules/hello",
    "modules/pl011",
    "modules/vfs",
    # Libraries
    "libs/bitflags",
    "libs/boot",
    "libs/dev",
    "libs/device-tree",
    "libs/elf-loader",
    "libs/interrupt",
    "libs/kernel-module",
    "libs/kernel-module/macros",
    "libs/klib",
    "libs/memory",
    "libs/sync",
    "libs/syscall",
    "libs/testing",
    "libs/user",
    "libs/vfs",
    # Tools
    "tools/dev",
    # Boot loaders
    "boot/uefi",
    # User programs
    "user/init",
    "user/tty",
    "user/hello",
    "user/ls",
]


[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(sophon_test)'] }


[workspace.package]
version = "0.0.3"
edition = "2021"

[profile.dev]
panic = "abort"
opt-level = "z" # temporarily reduce init.fs load time

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[workspace.dependencies]
spin = "0.9.8"
fdt-rs = { version = "0.4.5", default-features = false }
serde = { version = "1.0", default-features = false }
postcard = { version = "1.0.10", features = ["alloc"] }
atomic = "0.6"
crossbeam = { version = "0.8.4", default-features = false, features = [
    "alloc",
] }
hashbrown = "0.15"
cortex-a = "8.1.1"
tock-registers = "0.8.1"
yaml-rust = "0.4.5"
xshell = "0.2.6"
clap = { version = "4.5.20", features = ["derive"] }
uefi = { version = "0.32.0", features = ["panic_handler", "alloc", "logger"] }
xmas-elf = "0.9.1"
anyhow = { version = "1.0", default-features = false }
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
bitmask-enum = "2.2.4"
bytemuck = "1.19.0"
log = "0.4.22"
