[package]
name = "proton_kernel"
version = "0.1.0"
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = "2018"

[[bin]]
# crate-type = ["dylib"]
name = "proton"
path = "src/main.rs"

# [lib]
# name = "proton"
# path = "src/lib.rs"
# crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proton = { path = "../proton", features = ["kernel"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.5.2"
cortex-a = "2.7.0"
bitflags = "1.2.1"
goblin = { version = "0.1.0", default-features = false, features = ["elf32", "elf64", "endian_fd"] }
# device_tree = "1.1.0"
device_tree = { git = "https://github.com/rcore-os/device_tree-rs" }

[features]
default = [ "rls", "device-raspi3-qemu" ]
rls = []
# Devices
device-raspi3-qemu = []
device-raspi4 = []
