[package]
name = "proton"
version = "0.1.0"
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = "2018"

[[bin]]
name = "proton"
path = "src/main.rs"
required-features = ["kernel"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.2"
cortex-a = "6.0.0"
tock-registers = "0.7.0"
elf_rs = "0.1.3"
fdt = "0.1.3"

[features]
default = []
kernel = []