cargo-features = ["workspace-inheritance"]

[package]
name = "sophon"
version = "0.0.1"
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = { workspace = true }
cortex-a = { workspace = true }
tock-registers = { workspace = true }
elf_rs = { workspace = true }
fdt = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
atomic = { workspace = true }
crossbeam = { workspace = true }
hashbrown = { workspace = true }
ipc = { path = "../libs/ipc" }
memory = { path = "../libs/memory" }
interrupt = { path = "../libs/interrupt" }
log = { path = "../libs/log" }
boot = { path = "../libs/boot" }

[build-dependencies]
spin = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
yaml-rust = { workspace = true }

[features]
default = []
disable_log = ["log/disable"]