[package]
name = "sophon"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = { workspace = true }
cortex-a = { workspace = true }
tock-registers = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
atomic = { workspace = true }
syscall = { path = "../libs/syscall" }
memory = { path = "../libs/memory" }
interrupt = { path = "../libs/interrupt" }
log = { workspace = true }
boot = { path = "../libs/boot" }
kernel-module = { path = "../libs/kernel-module" }
elf-loader = { path = "../libs/elf-loader" }
vfs = { path = "../libs/vfs" }
proc = { path = "../libs/proc" }
device-tree = { path = "../libs/device-tree" }
sync = { path = "../libs/sync" }
sophon-macros = { path = "./macros" }
testing = { path = "../libs/testing" }
dev = { path = "../libs/dev" }
sched = { path = "../libs/sched" }

[build-dependencies]
spin = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
yaml-rust = { workspace = true }

[features]
default = []
disable_log = []
qemu = []

[lints]
workspace = true
