[package]
name = "proton_aarch64_uefi"
version = "0.1.0"
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = "2018"

[[bin]]
name = "proton"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proton = { path = "../../proton", features = ["kernel"] }
proton_kernel = { path = "../../kernel" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.5.2"
cortex-a = "3.0.3"
bitflags = "1.2.1"
device_tree = { git = "https://github.com/rcore-os/device_tree-rs" }
uefi = { version = "0.7.0" }

[features]
default = [ "device-raspi3-qemu" ]
# Devices
device-raspi3-qemu = []
device-raspi4 = []