cargo-features = ["workspace-inheritance"]

[package]
name = "sophon-boot-uefi"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }

[[bin]]
name = "sophon-boot-uefi"
path = "src/main.rs"

[dependencies]
spin = { workspace = true }
cortex-a = { workspace = true }
tock-registers = { workspace = true }
uefi = { workspace = true }
uefi-services = { workspace = true }
devtree = { path = "../../libs/devtree" }
memory = { path = "../../libs/memory" }
boot = { path = "../../libs/boot" }
log = { path = "../../libs/log" }
elf_loader = { path = "../../libs/elf_loader" }