[package]
name = "sophon-boot-uefi"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }

[[bin]]
name = "sophon-boot-uefi"
path = "src/main.rs"

[dependencies]
spin = { workspace = true }
cortex-a = { workspace = true }
tock-registers = { workspace = true }
uefi = { workspace = true }
uefi-services = { workspace = true }
psci = { version = "0.1.0", default-features = false, features = ["smc"] }
device-tree = { path = "../../libs/device-tree" }
memory = { path = "../../libs/memory" }
boot = { path = "../../libs/boot" }
log = { path = "../../libs/log" }
elf-loader = { path = "../../libs/elf-loader" }