[package]
name = "sophon-boot-uefi"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }

[[bin]]
name = "sophon-boot-uefi"
path = "src/main.rs"

[dependencies]
spin = { workspace = true }
cortex-a = { workspace = true }
tock-registers = { workspace = true }
uefi = { workspace = true }
device-tree = { path = "../../libs/device-tree" }
memory = { path = "../../libs/memory" }
boot = { path = "../../libs/boot" }
log = { workspace = true }
elf-loader = { path = "../../libs/elf-loader" }
