[package]
name = "emmc"
version = "0.1.0"
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5.2"
proton = { path = "../../proton", features = ["user"] }

[features]
default = [ "rls" ]
rls = []