[package]
name = "eflags"
description = "Ergonomic enum-based bitflags"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eflags-macros = { path = "macros" }

[features]
default = []
