[package]
name = "elf-loader"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmas-elf = { workspace = true }
memory = { path = "../memory" }
log = { workspace = true }

[features]
default = []
