[package]
name = "kernel-module"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
memory = { path = "../memory" }
kernel-module-macros = { path = "./macros" }
syscall = { path = "../syscall" }
device-tree = { path = "../device-tree" }
sync = { path = "../sync" }
interrupt = { path = "../interrupt" }
testing = { path = "../testing" }
vfs = { path = "../vfs" }
klib = { path = "../klib" }
anyhow = { workspace = true }
spin = { workspace = true }

[features]
default = []
disable = []

[lints]
workspace = true
