cargo-features = ["workspace-inheritance"]

[package]
name = "kernel_module"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { path = "../log" }
memory = { path = "../memory" }
kernel_module_macros = { path = "./macros" }
ipc = { path = "../ipc" }
anyhow = { workspace = true }
spin = { workspace = true }

[features]
default = []
disable = []