[package]
name = "klib"
description = "Kernel library for common data structures and interfaces defined in kernel"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { workspace = true }
spin = { workspace = true }
log = { workspace = true }
atomic = { workspace = true }
memory = { path = "../memory" }

[features]
default = []
