cargo-features = ["workspace-inheritance"]

[package]
name = "memory"
version = "0.0.1"
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = { workspace = true }
tock-registers = { workspace = true }
bitflags = { path = "../bitflags" }
interrupt = { path = "../interrupt" }
log = { path = "../log" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { workspace = true }

[features]
default = []