[package]
name = "memory"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { workspace = true }
spin = { workspace = true }
tock-registers = { workspace = true }
interrupt = { path = "../interrupt" }
log = { workspace = true }
syscall = { path = "../syscall" }
eflags = { path = "../eflags" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { workspace = true }

[features]
default = []
