cargo-features = ["workspace-inheritance"]

[package]
name = "mutex"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = { workspace = true }
log = { path = "../log" }
syscall = { path = "../syscall" }

[features]
default = []