cargo-features = ["workspace-inheritance"]

[package]
name = "user"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = { workspace = true }
memory = { path = "../memory" }
syscall = { path = "../syscall" }
vfs = { path = "../vfs" }

[features]
default = []