[package]
name = "bcm2711-gpio"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
log = { workspace = true }
kernel-module = { path = "../../libs/kernel-module" }
memory = { path = "../../libs/memory" }
interrupt = { path = "../../libs/interrupt" }
dev = { path = "../../libs/dev" }
anyhow = { workspace = true }
spin = { workspace = true }
cortex-a = { workspace = true }
tock-registers = { workspace = true }

[features]
default = []
