[package]
name = "dev-module"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }
description = "device management and dev-fs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dev"
crate-type = ["cdylib"]

[dependencies]
log = { path = "../../libs/log" }
kernel-module = { path = "../../libs/kernel-module" }
memory = { path = "../../libs/memory" }
syscall = { path = "../../libs/syscall" }
vfs = { path = "../../libs/vfs" }
dev = { path = "../../libs/dev" }
anyhow = { workspace = true }
spin = { workspace = true }

[features]
default = []