[package]
name = "gic-timer"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
log = { path = "../../libs/log" }
kernel-module = { path = "../../libs/kernel-module" }
memory = { path = "../../libs/memory" }
dev = { path = "../../libs/dev" }
interrupt = { path = "../../libs/interrupt" }
anyhow = { workspace = true }
spin = { workspace = true }
cortex-a = { workspace = true }
tock-registers = { workspace = true }

[features]
default = []