[package]
name = "hello-module"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hello"
crate-type = ["cdylib"]

[dependencies]
log = { workspace = true }
kernel-module = { path = "../../libs/kernel-module" }
anyhow = { workspace = true }

[features]
default = []
