cargo-features = ["workspace-inheritance"]

[package]
name = "pl011"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
log = { path = "../../libs/log" }
kernel_module = { path = "../../libs/kernel_module" }
anyhow = { workspace = true }

[features]
default = []