[package]
name = "pl011"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
log = { workspace = true }
kernel-module = { path = "../../libs/kernel-module" }
memory = { path = "../../libs/memory" }
dev = { path = "../../libs/dev" }
sync = { path = "../../libs/sync" }
interrupt = { path = "../../libs/interrupt" }
anyhow = { workspace = true }
spin = { workspace = true }
crossbeam = { workspace = true }

[features]
default = []
