cargo-features = ["workspace-inheritance"]

[package]
name = "test_km"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
ipc = { path = "../../libs/ipc" }
heap = { path = "../../libs/heap" }
log = { path = "../../libs/log" }
kernel_module = { path = "../../libs/kernel_module" }

[features]
default = []