cargo-features = ["workspace-inheritance"]

[package]
name = "vfs-module"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vfs"
crate-type = ["cdylib"]

[dependencies]
log = { path = "../../libs/log" }
kernel-module = { path = "../../libs/kernel-module" }
vfs = { path = "../../libs/vfs" }
proc = { path = "../../libs/proc" }
anyhow = { workspace = true }
spin = { workspace = true }

[features]
default = []